--- a/app/views/uploads/_form.html.erb
+++ b/app/views/uploads/_form.html.erb
@@ -11,6 +11,12 @@
     </div>
   <% end %>
 
+  <hr>
+
+  <%= f.attachment_field :documents_files, multiple: true, presigned: true, host: request.base_url %>
+
+  <hr>
+
   <div class="actions">
     <%= f.submit %>
   </div>
