--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Upload ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
   <tbody>
     <% @uploads.each do |upload| %>
       <tr>
+        <td><%= upload.id %></td>
         <td><%= link_to 'Show', upload %></td>
         <td><%= link_to 'Edit', edit_upload_path(upload) %></td>
         <td><%= link_to 'Destroy', upload, method: :delete, data: { confirm: 'Are you sure?' } %></td>
